# hello-d-from-cmake

./: .gitmodules  CMakeLists.txt  Class.d  Interface.d  README.md  Template.d  func.d  hello.d  interop.cpp  interop.d  interop2.d
lib/: CMakeLists.txt  calld.cpp  dlib.d
libs/: CMakeLists.txt
src/: CMakeLists.txt  Class.d  Interface.d  Template.d  arrays.d  features.d.in  forward.d  func.d  hello.d  interop.cpp  interop.d  interop2.d  interop2_c.c  lambdas.d  process.d  threading.d
src/internal/: lib.d  lib.di
tests/: CMakeLists.txt
tests/tests/: asset_test.d  basic_test.d  config.d.in  main.d
